--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,9 @@ default: &default
 development:
   <<: *default
   database: db/development.sqlite3
+  username: database_user
+  password: user_password
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
